css/mathquill.css
/* ... */
.mathquill-rendered-math var.florin { /* florin looks so much better than italic f */
  margin: 0 -.1em;
}

.mathquill-rendered-math big {
  font-size: 125%;
}

.mathquill-rendered-math .roman {
  font-style: normal;
}

.mathquill-rendered-math .sans-serif {
  font-family: sans-serif, Symbola, serif;
}

.mathquill-rendered-math .monospace {
  font-family: monospace, Symbola, serif;
}

.mathquill-rendered-math sup, .mathquill-rendered-math sub {
  position: relative;
  font-size: 90%;
}
.mathquill-rendered-math sup {
  vertical-align: .5em;
}
.mathquill-rendered-math .sup {
  vertical-align: bottom;
}
.mathquill-rendered-math sub {
  vertical-align: -.4em;
}
.mathquill-rendered-math .sub {
  vertical-align: top;
}
.mathquill-rendered-math sup.nthroot {
  margin-right: -.6em;
  margin-left: .2em;
  min-width: .5em;
}
.mathquill-rendered-math sup.int, .mathquill-rendered-math sub.int,
.mathquill-rendered-math sup.nthroot {
  font-size: 80%;
}
.mathquill-rendered-math sup.int, .mathquill-rendered-math sup.nthroot {
  vertical-align: .8em;
}
.mathquill-rendered-math sub.int {
  vertical-align: -.6em;
}

.mathquill-rendered-math .binary-operator {
  padding: 0 .2em;
}
.mathquill-rendered-math .unary-operator {
  padding-left: .2em;
}
.mathquill-rendered-math sup .binary-operator,
.mathquill-rendered-math sub .binary-operator {
  padding: 0 .1em;
}
.mathquill-rendered-math sup .unary-operator,
.mathquill-rendered-math sub .unary-operator {
  padding-left: .1em;
}

.mathquill-rendered-math .fraction {
  font-size: 90%;
  text-align: center;
  vertical-align: -.5em;
  padding: 0 .1em;
}
.mathquill-rendered-math .numerator, .mathquill-rendered-math .denominator {
  display: block;
  padding-top: .075em;
}
.mathquill-rendered-math .numerator {
  padding-left: .1em;
  padding-right: .1em;
}
.mathquill-rendered-math .denominator {
  border-top: 1px solid;
  float: right; /* take out of normal flow to manipulate baseline */
  width: 100%;
}

.mathquill-rendered-math sup .fraction, .mathquill-rendered-math sub .fraction {
  font-size: 70%;
  vertical-align: -.4em;
}
.mathquill-rendered-math sup .numerator, .mathquill-rendered-math sub .numerator {
  padding-bottom: 0;
}
.mathquill-rendered-math sup .denominator, .mathquill-rendered-math sub .denominator {
  padding-top: 0;
}

.mathquill-rendered-math .large-operator {
  text-align: center;
}
.mathquill-rendered-math .large-operator .from, .mathquill-rendered-math .large-operator big, .mathquill-rendered-math .large-operator .to  {
  display: block;
}
.mathquill-rendered-math .large-operator .from, .mathquill-rendered-math .large-operator .to  {
  font-size: 80%;
}
.mathquill-rendered-math .large-operator .from {
  margin-top: -.1em;
  float: right; /* take out of normal flow to manipulate baseline */
  width: 100%;
}

.mathquill-rendered-math .latex-command-input {
  color: inherit;
  font-family: "Courier New", monospace;
  border: 1px solid gray;
  padding-right: 1px;
  margin-right: 1px;
  margin-left: 2px;
}
.mathquill-rendered-math .latex-command-input.empty {
  background: transparent;
}

.mathquill-rendered-math .sqrt-prefix {
  padding-top: 0;
  position: relative;
  top: .1em;
  vertical-align: top;
  -webkit-transform-origin: top;
  -moz-transform-origin: top;
  -ms-transform-origin: top;
  -o-transform-origin: top;
  transform-origin: top;
}
.mathquill-rendered-math .sqrt-stem {
  border-top: 1px solid;
  margin-top: 1px;
  padding-left: .15em;
  padding-right: .2em;
  margin-right: .1em;
}

.mathquill-rendered-math .paren {
  padding: 0 .1em;
  vertical-align: bottom;
  -webkit-transform-origin: bottom left;
  -moz-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  -o-transform-origin: bottom left;
  transform-origin: bottom left;
}

.mathquill-rendered-math .array {
  vertical-align: middle;
  text-align: center;
}

.mathquill-rendered-math .array > span {
  display: block;
}

.mathquill-rendered-math var.un-italicized {
  font-family: Symbola, "Times New Roman", serif;
}
.mathquill-rendered-math var.un-italicized.last {
  padding-right: .2em;
}

/*.mathquill-rendered-math .not {
  margin-right: -.75em;
}*/

